# Amasijo

./: .gitignore  Amasijo.py  Functions.py  Gaussian.py  Quality.py  README.md  distributions.py  pyproject.toml
src/Amasijo/: Amasijo.py  PARSEC.py  __init__.py
src/Amasijo/PARSEC/: MLPs.py  train_logg.py  train_phot.py
